--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,5 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 #Tue Aug 23 12:15:22 ICT 2016
-systemProp.https.proxyPort=8080
-systemProp.http.proxyHost=10.12.1.251
-systemProp.https.proxyHost=10.12.1.251
-systemProp.http.proxyPort=8080
